fix: feature__link overflow blur

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,18 +166,17 @@ a > p:hover {
 }
 
 .feature__link {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 	position: relative;
-	width: 100%;
-	height: 100%;
 	border-radius: 10px;
 	overflow: hidden;
-	display: block;
 	text-decoration: none;
 }
 
 .feature__image {
 	aspect-ratio: 1/0.7;
-	height: auto;
 	transition: all 0.2s;
 }
 
